--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --overwrite --platform=darwin --arch=all --icon=assets/icons/icon.icns --extra-resource=./extraResources/config.json --prune=true --out=release-builds"
+    "build": "electron-packager . --overwrite --platform=darwin --arch=all --icon=assets/icons/icon.icns --extra-resource=./extraResources/config.csv --prune=true --out=release-builds"
   },
   "repository": "https://github.com/Pi-31415/Haptic-Jacket-Official",
   "keywords": [
