--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron-packager": "^15.2.0"
   },
   "dependencies": {
-    "csv": "^5.5.0"
+    "csv": "^5.5.0",
+    "csv-parser": "^3.0.0"
   }
 }
