--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^11.3.0",
+    "electron-installer-snap": "^5.1.0",
     "electron-packager": "^15.2.0"
   },
   "dependencies": {
