--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "dependencies": {
     "csv": "^5.5.0",
     "csv-parser": "^3.0.0"
+  },
+  "devDependencies": {
+    "electron": "7.0.0"
   }
 }
